clear cool-team

--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
-<title>Welcome to Cool Chat</title>
+<title>Welcome to Sayorama</title>
 <style>
   body {
     font-family: 'Arial', sans-serif;
@@ -52,16 +52,16 @@
 <body>
 <div class="container">
   <div class="header-logo"></div>
-    <img src="https://tygjaceleczftbswxxei.supabase.co/storage/v1/object/public/image_bucket/Content%20Home%20page/hover/Logo%20desk_blue.png" alt="Cool Chat Logo" />
+    <img src="https://f003.backblazeb2.com/file/imagesapp/logo_sayorama.jpg" alt="Sayorama Logo" />
   
-    <h1>Password recovery</h1>
+    <h1>Password recovery!</h1>
   
   <div class="welcome-message">
     <p>Hi, {{ name }}! 👋</p>
-    <p>You have requested a password reset for your Cool Chat account.</p>
+    <p>You have requested a password reset for your Sayorama account.</p>
     <p>Click the button below to confirm.</p>
     <p>If an error occurred and you have not attempted to reset your password, simply ignore this email.</p>
-    <p>The Cool Chat team wishes you a great day!</p>
+    <p>The Sayorama team wishes you a great day!</p>
   </div>
   <a href="{{ reset_link }}" target="_blank" class="reset-button" style="color: #fff;">Reset password</a>
 </div>
