--- a/templates/password_reset_mobile.html
+++ b/templates/password_reset_mobile.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
-<title>Password Recovery - Cool Chat</title>
+<title>Password Recovery - Sayorama</title>
 <style>
   body {
     font-family: 'Arial', sans-serif;
@@ -49,15 +49,15 @@
 <body>
 <div class="container">
   <div class="header-logo">
-    <img src="https://tygjaceleczftbswxxei.supabase.co/storage/v1/object/public/image_bucket/Content%20Home%20page/hover/Logo%20desk_blue.png" alt="Cool Chat Logo" />
+    <img src="https://f003.backblazeb2.com/file/imagesapp/logo_sayorama.jpg" alt="Sayorama Logo" />
   </div>
-  <h1>Password Recovery</h1>
+  <h1>Password Recovery!</h1>
   <div class="welcome-message">
-    <p>You have requested a password reset for your Cool Chat account.</p>
+    <p>You have requested a password reset for your Sayorama account.</p>
     <p>Please use the code below to complete the reset process:</p>
     <div class="code">{{ reset_code }}</div> 
     <p>If you did not request a password reset, please ignore this email.</p>
-    <p>The Cool Chat team wishes you a great day!</p>
+    <p>The Sayorama team wishes you a great day!</p>
   </div>
 </div>
 </body>
