--- a/templates/email.html
+++ b/templates/email.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
+<link rel="icon" href="https://f003.backblazeb2.com/file/imagesapp/logo_sayorama.jpg" type="image/png">
 <title>Welcome to Cool Chat</title>
 <style>
   body {
@@ -53,16 +53,16 @@
 <body>
 <div class="container">
   <div class="header-logo"></div>
-    <img src="https://tygjaceleczftbswxxei.supabase.co/storage/v1/object/public/image_bucket/Content%20Home%20page/hover/Logo%20desk_blue.png" alt="Cool Chat Logo" />
+    <img src="https://f003.backblazeb2.com/file/imagesapp/logo_sayorama.jpg" alt="Sayorama Logo" />
   
-    <h1>Welcome to the Cool Chat</h1>
+    <h1>Welcome to the Sayorama!</h1>
   
   <div class="welcome-message">
     <p>Hi, {{ name }}! 👋</p>
     <p>We are very glad that you chose our chat for exciting communication with interesting people on various topics.</p>
     <p>In our chat you will find rooms for communication on any topic. But if you have your own interesting topic, then become the creator of your wonderful chat room.</p>
-    <p>In order to use all the capabilities of Cool Chat, click the button below to verify your e-mail.</p>
-    <p>The Cool Chat team wishes you a great day!</p>
+    <p>In order to use all the capabilities of Sayorama, click the button below to verify your e-mail.</p>
+    <p>The Sayorama team wishes you a great day!</p>
   </div>
   <a href="{{ registration_link }}" target="_blank" class="verification-button" style="color: #fff;">Verification</a>
 </div>
