--- a/templates/mail_change_password.html
+++ b/templates/mail_change_password.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
-<title>Welcome to Cool Chat</title>
+<title>Welcome to Sayorama!</title>
 <style>
   body {
     font-family: 'Arial', sans-serif;
@@ -53,14 +53,14 @@
 <body>
 <div class="container">
   <div class="header-logo"></div>
-    <img src="https://tygjaceleczftbswxxei.supabase.co/storage/v1/object/public/image_bucket/Content%20Home%20page/hover/Logo%20desk_blue.png" alt="Cool Chat Logo" />
+    <img src="https://f003.backblazeb2.com/file/imagesapp/logo_sayorama.jpg" alt="Sayorama Logo" />
   
-    <h1>Changing your account password</h1>
+    <h1>Changing your account password!</h1>
   
   <div class="welcome-message">
     <p>Dear {{ name }}!</p>
     <p>We would like to inform you that your password for {{ name }} has been successfully changed. If you initiated this change, please ignore this message.</p>
-    <p>If you did not change your password and believe that this may have been a mistake or unauthorized access, please contact our support team immediately at [support email]</p>
+    <p>If you did not change your password and believe that this may have been a mistake or unauthorized access press button Blocked Account.</p>
     <p>The security of your account is our priority and we are working to ensure that your data is safe and secure.</p>
     <p>Thank you for using our service</p>
   </div>
