--- a/templates/blocked_account.html
+++ b/templates/blocked_account.html
@@ -62,7 +62,7 @@
         </video>
     </div>
     <div class="message">
-        <h2>Your account is blocked</h2>
+        <h2>Your account is blocked!</h2>
         <p>To unlock your account, use forgot password.</p>
         <p>Please close this page.</p>
     </div>
