--- a/templates/error_page.html
+++ b/templates/error_page.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
-<title>Chat Simulation with 404 Animation</title>
+<link rel="icon" href="https://f003.backblazeb2.com/file/imagesapp/Group+96+(1).png" type="image/png">
+<title>404 Animation</title>
 <style>
   body {
-    background-image: url('https://tygjaceleczftbswxxei.supabase.co/storage/v1/object/public/image_bucket/content%20common%20chat/Desktop/Foto%20empty%20chat.png');
-    background-size: 55%;
+    background-image: url('https://f003.backblazeb2.com/file/imagesapp/Foto+empty+chat+(1).png');
+    background-size: 40%;
     background-position: center;
     margin: 0;
     font-family: 'Comic Sans MS', cursive, sans-serif;
