--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
+<link rel="icon" href="https://f003.backblazeb2.com/file/imagesapp/Group+96+(1).png" type="image/png">
 <title>Welcome to Sayorama</title>
 <style>
   body {
@@ -52,7 +52,7 @@
 <body>
 <div class="container">
   <div class="header-logo"></div>
-    <img src="https://f003.backblazeb2.com/file/imagesapp/logo_sayorama.jpg" alt="Sayorama Logo" />
+    <img src="https://f003.backblazeb2.com/file/imagesapp/Group+96+(1).png" alt="Sayorama Logo" />
   
     <h1>Password recovery!</h1>
   
