--- a/templates/success_registration.html
+++ b/templates/success_registration.html
@@ -4,7 +4,7 @@
     <title>Registration Successful</title>
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
+        <link rel="icon" href="https://f003.backblazeb2.com/file/imagesapp/Group+96+(1).png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
 <body>
     <div class="video-background">
         <video autoplay loop muted>
-            <source src="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/video/fire__2.mp4?t=2024-06-01T17%3A25%3A08.070Z" type="video/mp4">
+            <source src="https://f003.backblazeb2.com/file/imagesapp/fire__2.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
