--- a/templates/window_new_password.html
+++ b/templates/window_new_password.html
@@ -9,7 +9,7 @@
     <title>Password Verification Page</title>
     <link rel="stylesheet" type="text/css" href="/static/new_password.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
+    <link rel="icon" href="https://f003.backblazeb2.com/file/imagesapp/Group+96+(1).png" type="image/png">
 </head>
 <style> .video-background {
     position: fixed;
@@ -101,7 +101,7 @@ h3{
 <body>
 
     <video class="video-background" autoplay muted loop>
-        <source src="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/video/fire__2.mp4?t=2024-06-01T17%3A25%3A08.070Z" type="video/mp4">
+        <source src="https://f003.backblazeb2.com/file/imagesapp/fire__2.mp4" type="video/mp4">
 </video> 
 
 
